--- a/02.css/step02_box_model/step07_practice.html
+++ b/02.css/step02_box_model/step07_practice.html
@@ -39,6 +39,7 @@
             margin-bottom: 10px;
             background-color: gold;
             color: white;
+            box-shadow: 0 0 0 3px rgba(0, 120, 255, 0.25);
         }
 
         div.links {
