--- a/02.css/step05_flex/step03_flex_practice.html
+++ b/02.css/step05_flex/step03_flex_practice.html
@@ -12,6 +12,7 @@
             align-items: center;
             background-color: rgb(13, 12, 12);
             color: white;
+            padding: 10px 20px;
         }
         .nav-links {
             display: flex;
