--- a/03.js/part02/step01_function/step01_funtion.html
+++ b/03.js/part02/step01_function/step01_funtion.html
@@ -31,7 +31,25 @@
             console.log('javascript');
         }
 
-        print(info);
+        // print(info);
+
+        // 즉시 실행함수
+        (function() {
+            var secret = '변수';
+            console.log('즉시 실행');
+        })();
+
+        const counter = (function() {
+            let count = 0;
+
+            return {
+                increment: function() {
+                    count++;
+                    console.log(count);
+                }
+            }
+        })();
+
     </script>
 </body>
 </html>
