--- a/03.js/part02/step02_object/step01_object.html
+++ b/03.js/part02/step02_object/step01_object.html
@@ -69,8 +69,12 @@
                 this.price = price;
             }
 
+            getInfo() {
+                return this.name + ' ' + this.price
+            }
+
             get displayPrice() {
-                return price;
+                return this.price;
             }
 
             set discountPrice(rate) {
@@ -80,7 +84,7 @@
         }
 
         const keyboard = new Product('키보드', 50000);
-        console.log(keyboard);
+        console.log(keyboard.getInfo());
 
     </script>
 </body>
