--- a/03.js/part02/step02_object/step07_json.html
+++ b/03.js/part02/step02_object/step07_json.html
@@ -17,7 +17,7 @@
 
         let names = ['ce', 'it', 'cloud'];
         let [, it, cloud] = names;
-        console.log(it);
+        // console.log(it);
 
         let info = {
             name: 'js',
@@ -26,7 +26,7 @@
         };
 
         let { name, age, hobbies } = info;
-        console.log(hobbies);
+        // console.log(hobbies);
 
         const bret = {
             "id": 1,
@@ -53,8 +53,69 @@
         }
 
         let { lat, lng } = bret.address.geo;
-        console.log(lat);
-        console.log(lng);
+        // console.log(lat);
+        // console.log(lng);
+
+        // let { username, email } = bret;
+        // console.log(email);
+
+
+        // 매개변수 기본값
+        function add(x, y = 0) {
+            return x + y;
+        }
+        // console.log(add(1));
+
+        // rest
+        function printData(...rest) {
+            console.log(rest);
+        }
+        // printData(10, 20, 30, 40, 50, 60);
+
+        // spread
+        let avengers = ['토르', '로키', '블랙위도우'];
+        let newAvengers = [...avengers, '스파이더맨'];
+        // console.log(newAvengers);
+        
+        const arr1 = [1, 2, 3];
+        const arr2 = [4, 5, 6];
+        const merged = [...arr1, ...arr2];
+        // console.log(merged);
+
+        const defaults = { theme: 'light', lang: 'ko' };
+        const userSettings = { theme: 'dark', lastSettingTime: new Date() };
+        const settings = { ...defaults, ...userSettings };
+        // console.log(settings);
+
+        // 시나리오 
+        // A 서버로 데이터 fetch, 데이터 추가 B 서버로 전달 
+        function updateUserData(userId) {
+            
+            // A 서버로 데이터 fetch
+            const response = `{"id": 1, "name": "json", "email": "json@example.com"}`;
+
+            const user = JSON.parse(response);
+
+            // 데이터 추가 B 서버로 전달
+            const {name, email} = user;
+            const updateUser = {...user, lastLogin: new Date()};
+            return JSON.stringify(updateUser);
+        }
+
+        // console.log(updateUserData(1));
+
+
+        // 함수 매개변수 비구조화
+        function createNotification({title, msg, type = 'info'}) {
+            return `[${type}] ${title} : ${msg}`;
+        }
+
+        console.log(
+            createNotification({
+                title: '알림',
+                msg: '새로운 메세지 전달'
+            })
+        );
 
     </script>
 </body>
