--- a/03.js/part03/step01_object_model/step05_practice.html
+++ b/03.js/part03/step01_object_model/step05_practice.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <style>
-        :root {
+        /* :root {
             --bg: #ffffff;
             --text: #000000;
         }
@@ -29,7 +29,7 @@
             cursor: pointer;
             border-radius: 8px;
             border: 1px solid #ccc;
-        }
+        } */
 
         /* .warning {
             color: red;
@@ -54,14 +54,15 @@
         });
     </script>
 
-    <!-- <textarea id="content" placeholder="내용을 입력하세요 (최대 20자)"></textarea>
-    <div>글자 수: <span id="char-count">0</span> / 20</div> -->
+    <!-- event 객체 활용 : e.target.value -->
+    <textarea id="content" placeholder="내용을 입력하세요 (최대 20자)"></textarea>
+    <div>글자 수: <span id="char-count">0</span> / 20</div>
 
-
-    <!-- <h2>오늘의 할 일</h2>
+    <!-- input.value -->
+    <h2>오늘의 할 일</h2>
     <input type="text" id="todo-input" placeholder="할 일을 입력하세요">
     <button id="add-btn">추가</button>
-    <ul id="todo-list"></ul> -->
+    <ul id="todo-list"></ul>
 
 </body>
 
