--- a/03.js/part03/step01_object_model/step04_practice.html
+++ b/03.js/part03/step01_object_model/step04_practice.html
@@ -12,6 +12,10 @@
             border: 2px dashed darkblue;
             margin: 20px;
         }
+
+        .gold {
+            background-color: gold;
+        }
     </style>
 </head>
 
@@ -23,6 +27,35 @@
         <li id="li-4">4</li>
         <li id="li-5">5</li>
     </ul>
+
+    <script>
+        const listItems = document.querySelectorAll('#menu li');
+        // listItems.forEach(listItem => {
+        //     listItem.addEventListener('click', (e) => {
+        //         if (e.currentTarget.style.backgroundColor === 'gold') {
+        //             e.currentTarget.style.backgroundColor = 'white';
+        //         } else {
+        //             e.currentTarget.style.backgroundColor = 'gold';
+        //         }
+        //     })
+        // });
+
+        // listItems.forEach(listItem => {
+        //     listItem.addEventListener('click', (e) => {
+        //         e.currentTarget.classList.toggle('gold');
+        //     })
+        // });
+
+        const menu = document.querySelector('#menu');
+        menu.addEventListener('click', (e) => {
+            const targetLi = e.target.closest('li');
+            
+            if(!targetLi || !menu.contains(targetLi)) return;
+
+            targetLi.classList.toggle('gold');
+        });
+
+    </script>
 </body>
 
 </html>
