--- a/03.js/part03/step02_api/step02_ajax.html
+++ b/03.js/part03/step02_api/step02_ajax.html
@@ -29,32 +29,49 @@
         }
         // xhrAjax();
 
-
+        const BASE_URL = 'https://jsonplaceholder.typicode.com/users';
         // fetch
         function fetchAjax() {
-            
+
             // GET
-            fetch('https://jsonplaceholder.typicode.com/users')
-                .then(response => response.json())
-                .then(users => console.log(users))
-                .catch(error => console.log(error));
+            // fetch(`${BASE_URL}/1`)
+            //     .then(response => response.json())
+            //     .then(users => console.log(users))
+            //     .catch(error => console.log(error));
+
+            // POST
+            // fetch(BASE_URL, {
+            //     method: 'POST',
+            //     headers: { 'Content-type': 'application/json' },
+            //     body: JSON.stringify({
+            //         "name": "JavaScript",
+            //         "username": "fetch",
+            //         "email": "post@fetch.com"
+            //     })
+            // }).then(response => response.json())
+            // .then(users => console.log(users))
+
+            // PUT, PATCH
+            // fetch(`${BASE_URL}/1`, {
+            //     method: 'PUT',
+            //     headers: { 'Content-type': 'application/json' },
+            //     body: JSON.stringify({
+            //         "username": "fetch"
+            //     })
+            // }).then(response => response.json())
+            // .then(user => console.log(user))
+
+            // DELETE
+            fetch(`${BASE_URL}/1`, {
+                method: 'DELETE'
+            }).then(response => response.json())
+            .then(user => console.log(user))
+
+
+
 
         }
         fetchAjax();
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
     </script>
 </body>
