--- a/03.js/part03/step02_api/step02_ajax.html
+++ b/03.js/part03/step02_api/step02_ajax.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 
 <body>
@@ -65,13 +66,50 @@
             fetch(`${BASE_URL}/1`, {
                 method: 'DELETE'
             }).then(response => response.json())
-            .then(user => console.log(user))
-
-
-
+                .then(user => console.log(user))
 
         }
-        fetchAjax();
+        // fetchAjax();
+
+        // axios
+        function axiosAjax() {
+            // GET
+            // axios.get(`${BASE_URL}/10`)
+            //     .then(response => console.log(response.data))
+
+            // POST
+            const newUser = {
+                "name": "JavaScript",
+                "username": "fetch",
+                "email": "post@fetch.com"
+            }
+            // axios.post(BASE_URL, newUser)
+            //     .then(response => response.data)
+            //     .then(user => console.log(user))
+
+
+            // PUT, PATCH
+            const updateInfo = {
+                "username": "fetch"
+            };
+            axios.put(`${BASE_URL}/1`, updateInfo)
+                .then(response => response.data)
+                .then(user => console.log(user))
+            axios.patch(`${BASE_URL}/1`, updateInfo)
+                .then(response => response.data)
+                .then(user => console.log(user))
+
+            // DELETE
+            axios.delete(`${BASE_URL}/1`)
+                .then(response => response.data)
+                .then(user => console.log(user))
+
+        }
+        axiosAjax();
+
+
+
+
 
     </script>
 </body>
