--- a/03.js/part03/step02_api/step02_ajax.html
+++ b/03.js/part03/step02_api/step02_ajax.html
@@ -87,7 +87,6 @@
             //     .then(response => response.data)
             //     .then(user => console.log(user))
 
-
             // PUT, PATCH
             const updateInfo = {
                 "username": "fetch"
@@ -105,11 +104,30 @@
                 .then(user => console.log(user))
 
         }
-        axiosAjax();
+        // axiosAjax();
 
+        // GET: 데이터 가져오기
+        async function fetchGetUsers() {
+            try {
+                const response = await fetch(BASE_URL);
+                if(!response.ok) throw new Error(`HTTP ${response.status}: ${response.statusText}`);
+                const data = await response.json();
+                return data;
+            } catch(error) {
+                throw error;
+            }
+        }
 
-
-
+        async function fetchGetUser(id) {
+            try {
+                const response = await fetch(`${BASE_URL}/${id}`);
+                if(!response.ok) throw new Error(`HTTP ${response.status}: ${response.statusText}`);
+                const data = await response.json();
+                return data;
+            } catch(error) {
+                throw error;
+            }
+        }
 
     </script>
 </body>
